--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -8,7 +8,7 @@
     <form asp-action="Register" method="post">
         <div class="mb-3">
             <label asp-for="Email" class="form-label">@localizer["Email"]</label>
-            <input asp-for="Email" class="form-control" />
+            <input asp-for="Email" type ="email" class="form-control" />
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
         <div class="mb-3">
