Work with form improvements

--- a/Views/Form/Details.cshtml
+++ b/Views/Form/Details.cshtml
@@ -9,7 +9,11 @@
     <p>@Model.Form.Description</p>
 
     <a asp-controller="Form" asp-action="SubmitForm" asp-route-id="@Model.Form.Id" class="btn btn-primary mb-3">@localizer["FillForm"]</a>
-
+    @if (Model.IsEditable)
+    {
+        <a asp-controller="Form" asp-action="EditForm" asp-route-id="@Model.Form.Id" class="btn btn-primary mb-3">@localizer["EditForm"]</a>
+        <a asp-controller="Form" asp-action="DeleteForm" asp-route-id="@Model.Form.Id" class="btn btn-primary mb-3">@localizer["DeleteForm"]</a>
+    }
     <h3>@localizer["YourAnswers"]</h3>
     @if (Model.UserAnswers.Any())
     {
