--- a/Views/Form/Partials/_ResultsTab.cshtml
+++ b/Views/Form/Partials/_ResultsTab.cshtml
@@ -1,5 +1,44 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using CourseProject
+@using CourseProject.Models
+@using Microsoft.Extensions.Localization
+@inject IStringLocalizer<SharedResources> localizer
+@model IEnumerable<FormAnswer>
+
+<div class="container mt-5">
+    <h2>@localizer["Statistics"]</h2>
+
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>@localizer["UserName"]</th>
+                    <th>@localizer["SubmittedAt"]</th>
+                    <th>@localizer["Actions"]</th>
+                </tr>
+            </thead>
+            <tbody>
+                @if (Model != null && Model.Any())
+                {
+                    foreach (var answer in Model)
+                    {
+                        <tr>
+                            <td>@(answer.User?.UserName)</td>
+                            <td>@answer.SubmittedAt.ToString("g")</td>
+                            <td>
+                                <a asp-controller="Form" asp-action="ViewAnswer" asp-route-id="@answer.Id" class="btn btn-primary btn-sm">
+                                    @localizer["View"]
+                                </a>
+                            </td>
+                        </tr>
+                    }
+                }
+                else
+                {
+                    <tr>
+                        <td colspan="3" class="text-center">@localizer["NoData"]</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
