--- a/Views/Form/EditForm.cshtml
+++ b/Views/Form/EditForm.cshtml
@@ -19,8 +19,13 @@
                 <div>
                     <div class="mb-3">
                         <label asp-for="Id" class="form-label">@localizer["Id"]</label>
-                        <input asp-for="Id" class="form-control" readonly value="@Model.Id"/>
+                        <input asp-for="Id" class="form-control" disabled readonly value="@Model.Id"/>
                         <span asp-validation-for="Id" class="text-danger"></span>
+                    </div>
+                    <div class="mb-3">
+                        <label asp-for="Author.UserName" class="form-label">@localizer["Author"]</label>
+                        <input asp-for="Author.UserName" class="form-control" disabled readonly value="@Model.Author.UserName" />
+                        <span asp-validation-for="Author.UserName" class="text-danger"></span>
                     </div>
                     <div class="mb-3">
                         <label asp-for="Title" class="form-label">@localizer["Title"]</label>
