--- a/Views/Form/Partials/_GeneralTab.cshtml
+++ b/Views/Form/Partials/_GeneralTab.cshtml
@@ -1,4 +1,4 @@
-﻿@using CourseProject
+﻿@* @using CourseProject
 @using CourseProject.ViewModels
 @using Microsoft.Extensions.Localization
 @inject IStringLocalizer<SharedResources> localizer
@@ -42,3 +42,4 @@
         <input type="text" asp-for="AllowedUserNames" class="form-control" placeholder="@localizer["Comma-SeparatedUserNames"]" />
     </div>
 </div>
+ *@
